--- a/05-batch/workbook.ipynb
+++ b/05-batch/workbook.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3a1dc31",
+   "id": "1f3b1fd1",
    "metadata": {},
    "source": [
     "#### Spark method for creating dataframe"
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "199ae512",
+   "id": "4ce05906",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2a9f36fb",
+   "id": "6be2b390",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf04bdd3",
+   "id": "b107c7a8",
    "metadata": {},
    "source": [
     "Now we see that when we use .schema there's a bit of \"parsing\""
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "10588532",
+   "id": "f3f62c9a",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744a7213",
+   "id": "95ef7c38",
    "metadata": {},
    "source": [
     "But it's still not an ideal schema so we're going to create custom schema"
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "7d7f6784",
+   "id": "2768e5c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "332bd8fd",
+   "id": "43cc6819",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "b0466533",
+   "id": "baf0a445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "8f2b7e46",
+   "id": "6e42c90d",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "7ee892db",
+   "id": "a9971f91",
    "metadata": {},
    "outputs": [
     {
@@ -442,9 +442,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1071d6fd",
+   "metadata": {},
+   "source": [
+    "#### Using Spark partition technique with \"df.repartition()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "f8ddb1d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[hvfhs_license_num: string, dispatching_base_num: string, pickup_datetime: timestamp, dropoff_datetime: timestamp, PULocationID: int, DOLocationID: int, SR_Flag: string]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.repartition(24)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ad7ca22",
+   "metadata": {},
+   "source": [
+    "Repartition is a 'lazy' function so it takes a bit time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "69b65690",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 19:>                                                         (0 + 8) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/02/28 23:58:19 WARN MemoryManager: Total allocation exceeds 95.00% (1,020,054,720 bytes) of heap memory\n",
+      "Scaling row group sizes to 95.00% for 8 writers\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df.write.parquet('fhvhv/2021/01')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80dfec62",
+   "id": "1f776d77",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04db027d",
+   "id": "aea1a983",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -460,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8df5ea",
+   "id": "836e29d6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,7 +539,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dacaf551",
+   "id": "e4b34142",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b839379a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c816d5ca",
    "metadata": {},
    "outputs": [],
    "source": []
