fixed worshop repo

--- a/Workshop2/Workshop_2_homework.ipynb
+++ b/Workshop2/Workshop_2_homework.ipynb
@@ -9,12 +9,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cae74e73",
+   "cell_type": "markdown",
+   "id": "e579a9a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Question 0\n",
+    "This question is just a warm-up to introduce dynamic filter, please attempt it before viewing its solution.\n",
+    "\n",
+    "What are the dropoff taxi zones at the latest dropoff times?\n",
+    "\n",
+    "For this part, we will use the dynamic filter pattern."
+   ]
   },
   {
    "cell_type": "code",
